add pre-commit and switch to new auth server
